Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
   <title>Lists Lab</title>
 </head>
 <body>
+<ul>
+  <li>2 slices of bread</li>
+  <li>4 slices of cheese
+    <ul>
+      <li>cheddar</li>
+      <li>mozzarella</li>
+      <li>pepper jack</li>
+    </ul>
+  </li>
+  <li>1 tbsp of butter</li>
+</ul>
 
   <!-- Write your HTML in this file -->
 
