--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   <li>1 tbsp of butter</li>
 </ul>
 
+<h3>Top 5 Favorite Foods</h3>
+<ol>
+  <li>Grilled Cheese</li>
+  <li>Sushi</li>
+  <li>Cheese and crackers</li>
+  <li>Cheese soup</li>
+  <li>Nacho Cheese French Fries</li>
+</ol>
+
   <!-- Write your HTML in this file -->
 
 </body>
