--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 <h3>Top 5 Favorite Foods</h3>
 <ol>
   <li>Grilled Cheese</li>
+    <ol>
+      <li>Spread butter on bread and frying pan
+      <li>Place bread in frying pan and fry
+      <li>Add cheese on top of bread
+      <li>Cover with second slice of bread
+      <li>Turn over and fry for 2 minutes
+    </ol>
   <li>Sushi</li>
   <li>Cheese and crackers</li>
   <li>Cheese soup</li>
